# webrtc-teleoperation

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  cliff.toml  main.cpp  main.html
avular_mavros_msgs/: CMakeLists.txt
avular_mavros_msgs/srv/: SetShapeExample.srv
docker/: Dockerfile  Dockerfile.dev  Dockerfile.origin  Dockerfile.vertex  docker-compose.dev.yaml  docker-compose.origin.dev.yaml  docker-compose.origin.yaml  docker-compose.vertex.yaml  docker-compose.yaml
docs/: component diagram.drawio  index.md  testing.md
origin_webrtc_teleop/: CMakeLists.txt  package.xml
origin_webrtc_teleop/config/: origin_webrtc_teleop.yaml
origin_webrtc_teleop/launch/: origin_webrtc_teleop.launch.py
origin_webrtc_teleop/src/: OriginController.cpp  OriginController.hpp  TeleopConfigParser.cpp  TeleopConfigParser.hpp  origin_controller.cpp  origin_controller.hpp  origin_webrtc_teleop_node.cpp  origin_webrtc_teleop_node.hpp  origin_webrtc_teleop_node_main.cpp  teleop_config_parser.cpp  teleop_config_parser.hpp
origin_webrtc_teleop/src/teleop_client/: PeerConnection.cpp  PeerConnection.hpp  Teleoperation.cpp  Teleoperation.hpp  VideoEncoder.cpp  VideoEncoder.hpp
pc_client/: CMakeLists.txt  main.cpp
pc_client/teleop_actions/: Action.cpp  Action.hpp  AddClientsAction.cpp  AddClientsAction.hpp  SendCounterAction.cpp  SendCounterAction.hpp  StreamVideoAction.cpp  StreamVideoAction.hpp  StreamVideoCvAction.cpp  StreamVideoCvAction.hpp  action.cpp  action.hpp  add_clients_action.cpp  add_clients_action.hpp  send_counter_action.cpp  send_counter_action.hpp  stream_video_action.cpp  stream_video_action.hpp  stream_video_cv_action.cpp  stream_video_cv_action.hpp
robot-client/: PeerConnection.cpp  PeerConnection.hpp  Teleoperation.cpp  Teleoperation.hpp  main.cpp
robot-client/teleop_actions/: Action.hpp  AddClientsAction.cpp  SendCounterAction.hpp  StreamVideoAction.cpp  StreamVideoAction.hpp
signaling/: pyproject.toml  signaling-server.py
teleop_client_lib/: CMakeLists.txt
teleop_client_lib/include/teleop_client/: Teleoperation.hpp  peer_connection.hpp  teleoperation.hpp  video_encoder.hpp
teleop_client_lib/src/: PeerConnection.cpp  Teleoperation.cpp  VideoEncoder.cpp  peer_connection.cpp  teleoperation.cpp  video_encoder.cpp
vertex_webrtc_teleop/: CMakeLists.txt  package.xml
vertex_webrtc_teleop/config/: vertex_webrtc_teleop.yaml
vertex_webrtc_teleop/launch/: vertex_webrtc_teleop.launch.py
vertex_webrtc_teleop/src/: teleop_config_parser.cpp  vertex_webrtc_teleop_node.cpp  vertex_webrtc_teleop_node.hpp  vertex_webrtc_teleop_node_main.cpp
web-client/: index.html  script.js
web_client/: README.md  index.html  package-lock.json  package.json  script.js  style.css  vite.config.ts
web_client/src/: declarations.d.ts
web_client/src/lib/: index.ts  teleoperationStore.ts
web_client/src/lib/components/: Connection.svelte  Gamepad.svelte  Plot.svelte  SetActiveConnection.svelte  SetShapeExample.svelte  StateReference.svelte  Video.svelte
web_client/src/routes/: +page.server.js  +page.svelte  Battery.svelte  Connection.svelte  Gamepad.svelte  Latency.svelte  Logs.svelte  Messaging.svelte  Network.svelte  Odometry.svelte  Video.svelte
web_client/src/routes/origin/: +page.svelte
web_client/src/routes/vertex/: +page.svelte
