<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>origin_webrtc_teleop</name>
    <version>0.0.1</version>
    <description>node responsible for origin teleoperation</description>
    <maintainer email="b.sojka@avular.com">Bartosz Sojka</maintainer>
    <license>Avular Confidential</license>

    <buildtool_depend>cmake_avular</buildtool_depend>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_avular</depend>
    <depend>origin_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>LibDataChannel</depend>
    <depend>Threads</depend>
    <depend>nlohmann_json</depend>
    <depend>ffmpeg-dev</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <exec_depend>ros2launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
